# todo-app-k8s

./: README.md  skaffold.yaml
.github/workflows/: test.yaml
charts/todo/: values.yaml
charts/todo/templates/: api.yaml  frontend.yaml
images/api/: Dockerfile  Dockerfile.Development
images/frontend/: Dockerfile  Dockerfile.Development
scripts/: test.sh
scripts/test/api/: test.sh
scripts/test/frontend/: test.sh
src/api/: pyproject.toml
src/api/src/: main.py
src/frontend/: package-lock.json
