[tool.poetry]
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]
description = ""
name = "api"
packages = [{include = "src"}]
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.65.2"
gunicorn = "^20.1.0"
python = "^3.8"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
